dataset1235/2025-2/2947369575/users/2551804183/executions/1003782500_2383239197.log
== SUBMISSION (2025-08-27 23:36:38)
-- CODE: 
import math
a = float(input())
b = float(input())
gamma_graus = float(input())

gramma_rad = math.radians(gamma_graus)
cos_gamma = math.cos(gramma_rad)

c = math.sqrt(a**2+b**2-2*a*b*cos_gamma)
print(round(c, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:34:22)
-- CODE: 
import math
a = float(input())
b = float(input())
gamma_graus = float(input())

gramma_rad = math.radians(gamma_graus)
cos_gamma = math.cos(gamma_rad)

c = math.sqrt(a**2+b**2-2*a*b*cos_gamma)
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cos_gamma = math.cos(gamma_rad)
                         ^^^^^^^^^
NameError: name 'gamma_rad' is not defined. Did you mean: 'gramma_rad'?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cos_gamma = math.cos(gamma_rad)
                         ^^^^^^^^^
NameError: name 'gamma_rad' is not defined. Did you mean: 'gramma_rad'?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cos_gamma = math.cos(gamma_rad)
                         ^^^^^^^^^
NameError: name 'gamma_rad' is not defined. Did you mean: 'gramma_rad'?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cos_gamma = math.cos(gamma_rad)
                         ^^^^^^^^^
NameError: name 'gamma_rad' is not defined. Did you mean: 'gramma_rad'?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cos_gamma = math.cos(gamma_rad)
                         ^^^^^^^^^
NameError: name 'gamma_rad' is not defined. Did you mean: 'gramma_rad'?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cos_gamma = math.cos(gamma_rad)
                         ^^^^^^^^^
NameError: name 'gamma_rad' is not defined. Did you mean: 'gramma_rad'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:04:57)
-- CODE: 
import math
 a = float(input())
b = float(input())
gamma_graus = float(input())

gramma_rad = math.radians(gamma_graus)
cos_gamma = math.cos(gamma_rad)

c = matha.sqrt(a**2+b**2-2*a*b*cos_gamma)
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 2
    a = float(input())
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 2
    a = float(input())
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 2
    a = float(input())
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 2
    a = float(input())
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 2
    a = float(input())
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 2
    a = float(input())
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:34:08)
-- CODE: 
import math
a = float(input())
b = float(input())
gamma_graus = float(input())

gramma_rad = math.radians(gamma_graus)
cos_gamma = math.cos(gamma_rad)

c = matha.sqrt(a**2+b**2-2*a*b*cos_gamma)
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cos_gamma = math.cos(gamma_rad)
                         ^^^^^^^^^
NameError: name 'gamma_rad' is not defined. Did you mean: 'gramma_rad'?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cos_gamma = math.cos(gamma_rad)
                         ^^^^^^^^^
NameError: name 'gamma_rad' is not defined. Did you mean: 'gramma_rad'?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cos_gamma = math.cos(gamma_rad)
                         ^^^^^^^^^
NameError: name 'gamma_rad' is not defined. Did you mean: 'gramma_rad'?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cos_gamma = math.cos(gamma_rad)
                         ^^^^^^^^^
NameError: name 'gamma_rad' is not defined. Did you mean: 'gramma_rad'?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cos_gamma = math.cos(gamma_rad)
                         ^^^^^^^^^
NameError: name 'gamma_rad' is not defined. Did you mean: 'gramma_rad'?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cos_gamma = math.cos(gamma_rad)
                         ^^^^^^^^^
NameError: name 'gamma_rad' is not defined. Did you mean: 'gramma_rad'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:15:01)
-- CODE: 
import math

# Entrada dos dados
a = float(input())  # distância do observador à primeira árvore
b = float(input())  # distância do observador à segunda árvore
gamma_graus = float(input())  # ângulo entre a e b em graus

# Converter o ângulo de graus para radianos
gamma_radianos = math.radians(gamma_graus)

# Aplicar a lei dos cossenos: c² = a² + b² - 2ab*cos(γ)
c_quadrado = a**2 + b**2 - 2 * a * b * math.cos(gamma_radianos)

# Calcular c (raiz quadrada do resultado)
c = math.sqrt(c_quadrado)

# Arredondar para duas casas decimais e imprimir
print(round(c, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:36:37)
-- CODE: 
import math
a = float(input())
b = float(input())
gamma_graus = float(input())

gramma_rad = math.radians(gamma_graus)
cos_gamma = math.cos(gramma_rad)

c = math.sqrt(a**2+b**2-2*a*b*cos_gamma)
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
9.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:36:05)
-- CODE: 
import math
a = float(input())
b = float(input())
gamma_graus = float(input())

gramma_rad = math.radians(gamma_graus)
cos_gamma = math.cos(gramma_radamma_rad)

c = math.sqrt(a**2+b**2-2*a*b*cos_gamma)
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cos_gamma = math.cos(gramma_radamma_rad)
                         ^^^^^^^^^^^^^^^^^^
NameError: name 'gramma_radamma_rad' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cos_gamma = math.cos(gramma_radamma_rad)
                         ^^^^^^^^^^^^^^^^^^
NameError: name 'gramma_radamma_rad' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cos_gamma = math.cos(gramma_radamma_rad)
                         ^^^^^^^^^^^^^^^^^^
NameError: name 'gramma_radamma_rad' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cos_gamma = math.cos(gramma_radamma_rad)
                         ^^^^^^^^^^^^^^^^^^
NameError: name 'gramma_radamma_rad' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cos_gamma = math.cos(gramma_radamma_rad)
                         ^^^^^^^^^^^^^^^^^^
NameError: name 'gramma_radamma_rad' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cos_gamma = math.cos(gramma_radamma_rad)
                         ^^^^^^^^^^^^^^^^^^
NameError: name 'gramma_radamma_rad' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
